# kokebok-api

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  fly.toml  poetry.toml  pyproject.toml  readme.md  requirements.txt  setup.cfg
kokebok/: .dockerignore  .env.dev  .env.dist  .example.env.dev  Dockerfile  fly.toml  manage.py  pyproject.toml  setup.cfg
kokebok/core/: admin.py  auth_api.py  managers.py  models.py
kokebok/core/migrations/: 0001_initial.py  0002_alter_user_options.py
kokebok/kokebok/: asgi.py  settings.py  urls.py  wsgi.py
kokebok/recipes/: admin.py  api.py  api_schemas.py  embedding.py  image_parsing.py  models.py  populate.py  scrape_test.py  services.py  tests.py
kokebok/recipes/image_parsing/: __init__.py  example_data.py  google_image_ocr.py  openai_with_vision.py  text_parsing.py
kokebok/recipes/migrations/: 0001_initial.py  0002_rename_amount_per_serving_recipeingredient_base_amount_and_more.py  0002_rename_description_recipe_content_recipe_hero_image_and_more.py  0003_alter_recipe_servings_alter_recipe_total_time.py  0003_recipeingredient_group_name.py  0004_rename_ingress_recipe_preamble.py  0005_remove_recipeingredient_measurement_and_more.py  0006_alter_recipeingredient_unit.py  0007_alter_recipeingredient_base_amount.py  0008_alter_recipe_hero_image.py  0009_recipe_language_recipe_original_author.py  0010_rename_servings_recipe_yields_number_and_more.py  0011_alter_recipe_content_alter_recipe_language_and_more.py  0012_alter_recipe_original_author_and_more.py  0013_alter_recipe_hero_image_and_more.py  0014_alter_recipe_hero_image_alter_recipeingredient_unit.py  0015_recipe_thumbnail_alter_recipe_total_time.py  0019_recipeembedding.py  (+6 more)
(+25 files in other folders)
